# hotelreservationsystem

./: .gitignore  CMakeLists.txt  HotelReservation.dev  HotelReservation.layout  HotelReservationQt.pro  Hotelexception.cpp  Hotelexception.h  Makefile.win  README.md  admin.cpp  admin.h  billing.cpp  billing.h  bills.txt  booking.cpp  booking.h  bookings.txt  doubleroom.cpp  doubleroom.h  filemanager.cpp  filemanager.h  guest.cpp  guest.h  guests.txt  hotelsystem.cpp  hotelsystem.h  main.cpp  person.cpp  person.h  qt_main.cpp  records.cpp  records.h  room.cpp  room.h  rooms.txt  rules.cpp  rules.h  singleroom.cpp  singleroom.h  suiteroom.cpp  (+1 more)
Hotel/: HotelReservation.dev  guest.cpp  guest.h  main.cpp
Hotel/rough/: persontxt.txt
